# reAAF

./: .clang-format  .gitignore  .gitmodules  .reapack-index.conf  CHANGELOG.md  CMakeLists.txt  README.md  index.xml  update_swell_res.sh
.github/workflows/: build.yml  reaper-cmake-multi-platform.yml  release.yml  tests.yml
Extensions/: reAAF.ext
docs/: aaf-format-support.md
include/: aaf_import.h
src/: AafData.h  AafEmitter.cpp  AafEmitter.h  AafImporter.cpp  AafImporter.h  AafiHandle.h  FadeResolver.cpp  FadeResolver.h  IRppSink.h  LogBuffer.cpp  LogBuffer.h  LogDialog.cpp  LogDialog.h  PrefsPage.cpp  PrefsPage.h  ProgressDialog.cpp  ProgressDialog.h  ReaperSink.cpp  ReaperSink.h  RppWriter.cpp  RppWriter.h  XFadeMap.cpp  XFadeMap.h  aaf_envelopes.cpp  aaf_envelopes.h  aaf_import.cpp  aaf_import.h  aaf_markers.cpp  aaf_markers.h  defines.h  helpers.cpp  helpers.h  main.cpp  resource.h  resource.rc  resource.rc.in  resource.rc_mac_dlg  resource_swell.cpp  version.h.in
tests/: CMakeLists.txt  helpers_stubs.cpp  test_aafemitter.cpp  test_aafimporter.cpp  test_aafimporter_mr.cpp  test_faderesolver.cpp  test_helpers.cpp  test_logbuffer.cpp  test_progressdialog_format.cpp  test_rppwriter.cpp
tests/golden/: DR_Audio_Levels.rpp  DR_Empty.rpp  DR_MP3_External.rpp  DR_Markers.rpp  DR_Mono_Clip_Positioning.rpp  DR_Multichannel_5.1_single_source.rpp  DR_Multichannel_7.1_single_source.rpp  DR_Multichannel_stereo_single_source.rpp  DR_Stereo_Clip_Positioning.rpp  MC_Audio_Levels.rpp  MC_Audio_Pan.rpp  MC_Audio_Warp.rpp  MC_Clip_Mute.rpp  MC_Empty.rpp  MC_Fades.rpp  MC_Markers.rpp  MC_Metadata.rpp  MC_TC_100.rpp  MC_TC_119.88_DF.rpp  MC_TC_119.88_NDF.rpp  MC_TC_120_DF.rpp  MC_TC_120_NDF.rpp  MC_TC_23.976.rpp  MC_TC_24.rpp  MC_TC_25.rpp  MC_TC_29.97_DF.rpp  MC_TC_29.97_NDF.rpp  MC_TC_30_DF.rpp  MC_TC_30_NDF.rpp  MC_TC_50.rpp  MC_TC_59.94_DF.rpp  MC_TC_59.94_NDF.rpp  MC_TC_60_DF.rpp  MC_TC_60_NDF.rpp  MC_Track_Solo_Mute.rpp  PR_AIFF_Internal.rpp  PR_Audio_Levels-noBTM.rpp  PR_Audio_Pan-noBTM.rpp  PR_Clip_length_beyond_EOF.rpp  PR_Fades.rpp  (+24 more)
tests/golden-aaftool/: DR_Audio_Levels.aaftool  DR_Empty.aaftool  DR_MP3_External.aaftool  DR_Markers.aaftool  DR_Mono_Clip_Positioning.aaftool  DR_Multichannel_5.1_single_source.aaftool  DR_Multichannel_7.1_single_source.aaftool  DR_Multichannel_stereo_single_source.aaftool  DR_Stereo_Clip_Positioning.aaftool  MC_Audio_Levels.aaftool  MC_Audio_Pan.aaftool  MC_Audio_Warp.aaftool  MC_Clip_Mute.aaftool  MC_Empty.aaftool  MC_Fades.aaftool  MC_Markers.aaftool  MC_Metadata.aaftool  MC_TC_100.aaftool  MC_TC_119.88_DF.aaftool  MC_TC_119.88_NDF.aaftool  MC_TC_120_DF.aaftool  MC_TC_120_NDF.aaftool  MC_TC_23.976.aaftool  MC_TC_24.aaftool  MC_TC_25.aaftool  MC_TC_29.97_DF.aaftool  MC_TC_29.97_NDF.aaftool  MC_TC_30_DF.aaftool  MC_TC_30_NDF.aaftool  MC_TC_50.aaftool  MC_TC_59.94_DF.aaftool  MC_TC_59.94_NDF.aaftool  MC_TC_60_DF.aaftool  MC_TC_60_NDF.aaftool  MC_Track_Solo_Mute.aaftool  PR_AIFF_Internal.aaftool  PR_Audio_Levels-noBTM.aaftool  PR_Audio_Pan-noBTM.aaftool  PR_Clip_length_beyond_EOF.aaftool  PR_Fades.aaftool  (+23 more)
